[build-system]
requires = ["setuptools>=68", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "argus"
version = "0.1.0"
description = "AI Platform Health Monitoring Service"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "aiohttp>=3.9.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "twilio>=9.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "fastapi>=0.135.1",
]

[project.scripts]
argus = "argus.cli:app"

[tool.setuptools.packages.find]
where = ["."]
